# itergen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  api.html  architecture.html  changelog.html  configuration.html  coverage.json  draft_1.xlsx  draft_eda.ipynb  features.html  genindex.html  objects.inv  py-modindex.html  pyproject.toml  release.html  requirements.txt  sample_run.py  searchindex.js  test.ipynb  troubleshooting.html
.doctrees/: architecture.doctree  changelog.doctree  configuration.doctree  features.doctree  index.doctree  quickstart.doctree  release.doctree  troubleshooting.doctree
.doctrees/_autosummary/: vorongen.sample_configs.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  documentation.yml  release.yml
_modules/: index.html
_modules/itergen/api/: models.html  synthesizer.html
_modules/vorongen/: models.html  sample_configs.html  synthesizer.html
_modules/vorongen/api/: synthesizer.html
_modules/vorongen/schema/: samples.html
_sources/: features.md.txt  quickstart.md.txt  release.md.txt  troubleshooting.md.txt
_sources/_autosummary/: vorongen.sample_configs.rst.txt
config/notes/: how_to_distributions.md  how_to_fill_config_files.md  how_to_write_functions.md
config/templates/binary/: binary_config_example.yaml
config/templates/categorical/: categorical_config_example.yaml
config/templates/mixed_type/: mixed_config_example.yaml
config/templates/numerical/: numerical_config_example.yaml
demo/: .gitignore  README.md  dependency_aware_generation.drawio  iris_params.json  iris_params.yaml  iris_synthesis.py  mwp_benchmark.ipynb  notebook.ipynb
demo/data/: healthcare_extracted_config.yaml
demo/output/: iris_comparison.json  iris_config.json  iris_report.md  iris_synthetic.csv  native_metrics.json  summary.json
docs/: architecture.md  configuration.md  features.md  quickstart.md  troubleshooting.md
docs/source/: api.md  architecture.md  changelog.md  conf.py  configuration.md  features.md  index.rst  quickstart.md  release.md  troubleshooting.md
notebooks/: benchmark_capabilities_full.ipynb  benchmark_capabilities_light.ipynb  notes.ipynb  testing_new_tools.ipynb
source/: api.md  architecture.md  changelog.md  conf.py  configuration.md  index.rst  quickstart.md  release.md  troubleshooting.md
source/_autosummary/: vorongen.models.rst
source/diagrams/: vorongen-architecture.drawio
src/.vorongen_old_do_not_touch/: conditions.py  config.py  generation.py
src/itergen/: __init__.py  __main__.py
src/itergen/api/: __init__.py  models.py  synthesizer.py
src/itergen/benchmarks/: benchmark_attempt_workers.py  benchmark_optimizer_scoring.py
src/itergen/controllers/: classic.py
src/itergen/engine/: generation.py  optimizer.py
src/itergen/runtime/: logging_utils.py
src/itergen/schema/: config.py  defaults.py  samples.py  validation.py
src/itergen/scoring/: metrics.py
src/vorongen/: README.md  __init__.py  __main__.py  _bootstrap.py  _deprecation.py  adjustments.py  cli.py  conditions.py  config.py  defaults.py  generation.py  initial.py  logging_utils.py  main.py  metrics.py  models.py  nn_controller.py  optimizer.py  pipeline.py  requirements.txt  rng.py  sample_configs.py  samples.py  summary.md  synthesizer.py  torch_controller.py
src/vorongen/api/: __init__.py  cli.py  models.py  synthesizer.py
src/vorongen/benchmarks/: benchmark_attempt_workers.py  benchmark_optimizer_scoring.py
src/vorongen/controllers/: __init__.py  torch.py
src/vorongen/engine/: __init__.py  adjustments.py  generation.py  initial.py  optimizer.py
src/vorongen/notebooks/: state_of_art_workflow.ipynb
src/vorongen/runtime/: __init__.py  logging_utils.py
src/vorongen/schema/: __init__.py
src/vorongen/scoring/: __init__.py
src/vorongen/tests/: test_workflow_smoke.py
tests/: test_cli.py  test_conditions_initial_adjustments.py  test_entrypoints_and_logging.py  test_generation_control_flow.py  test_metrics_helpers.py  test_optimizer_more.py  test_package_init_version.py  test_public_api.py  test_samples_helpers.py  test_schema_config_helpers.py  test_schema_validation_helpers.py  test_synthesizer_helpers.py  test_workflow_smoke.py
voronogeen_package/: README.md  __init__.py  pipeline.py  samples.py  settings.py  torch_controller.py
voronogeen_package/notebooks/: state_of_art_workflow.ipynb
