[build-system]
requires = ["setuptools>=69", "wheel", "tomli>=2.0.1; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "itergen"
version = "0.1.0"
description = "Synthetic data generation engine for dependency-driven tabular datasets"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Itergen Contributors" }]
keywords = ["synthetic-data", "tabular-data", "data-generation", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "PyYAML>=6.0",
    "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://github.com/temur-mn/itergen"
Documentation = "https://temur-mn.github.io/itergen/"
Source = "https://github.com/temur-mn/itergen"
Issues = "https://github.com/temur-mn/itergen/issues"
Changelog = "https://github.com/temur-mn/itergen/blob/main/CHANGELOG.md"

[project.optional-dependencies]
torch = ["torch>=2.1"]
dev = [
    "build>=1.2.2",
    "twine>=5.1.1",
    "ruff>=0.6.4",
    "mypy>=1.11",
    "types-PyYAML>=6.0.12.20240917",
    "jupyter>=1.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["itergen*"]
exclude = ["itergen.benchmarks*"]
namespaces = false

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["build", "dist", "docs/source/_autosummary"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/itergen/schema/config.py" = ["E501"]
"src/itergen/schema/validation.py" = ["E501"]
"src/itergen/schema/samples.py" = ["E501"]
"src/itergen/benchmarks/*.py" = ["E501"]
"*.ipynb" = ["E402", "E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
pretty = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
files = ["src/itergen"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
